[#8072] Fix bind.pinpoint api to return json